--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
     "node-sass": "^7.0.1"
   },
   "scripts": {
-    "sass":"node-sass assets/style/scss/main.scss -o assets/style/css -w"
-  }
+    "sass": "node-sass assets/style/scss/main.scss -o assets/style/css -w"
+  },
+  "name": "weekendtaskpyp-ner",
+  "description": "Weekend PYP Team Task",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elnurxo/WeekendTaskPYP-NER.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/elnurxo/WeekendTaskPYP-NER/issues"
+  },
+  "homepage": "https://github.com/elnurxo/WeekendTaskPYP-NER#readme",
+  "keywords": []
 }
